# rustacean-os

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.bat  build.sh  docker-build.sh  i686-rustacean.json
boot/: boot.asm  stage2.asm
kernel/: Cargo.toml  linker.ld
kernel/src/: boot_info.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86/: gdt.rs  idt.rs  io.rs  mod.rs  pic.rs  pit.rs
kernel/src/drivers/: ati_rage.rs  init.rs  keyboard.rs  mod.rs  mouse.rs  synaptics.rs  vga.rs
kernel/src/event_chains/: chain.rs  context.rs  middleware.rs  mod.rs  result.rs
kernel/src/fs/: mod.rs
kernel/src/fs/exfat/: mod.rs
kernel/src/gui/: desktop.rs  font.rs  framebuffer.rs  mod.rs  theme.rs  window.rs  wm_events.rs
kernel/src/mm/: heap.rs  intrusive.rs  mod.rs  pmm.rs
kernel/src/sched/: mod.rs
kernel/src/syscall/: mod.rs
